--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 	<head>
 		<title></title>
 		<script src="p5.min.js"></script>
+		<script src="./Piece/piece.js"></script>
+		<script src="./Square/square.js"></script>
+		<script src="./Grid/grid.js"></script>
 		<script src="main.js"></script>
 	</head>
 	<body>
-		
+
 	</body>
 </html>
