--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 		<script src="./Square/square.js"></script>
 		<script src="./Grid/grid.js"></script>
 		<script src="main.js"></script>
+		<link rel="stylesheet" type="text/css" href="/css/reset.css" />
+		<link rel="stylesheet" type="text/css" href="/css/mainpage.css" />
 	</head>
 	<body>
+		<header class="header">
+			<h1>Tetris</h1>
+		</header>
+		<main class="container">
 
+		</main>
 	</body>
 </html>
