--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<script src="./Square/square.js"></script>
 		<script src="./Grid/grid.js"></script>
 		<script src="main.js"></script>
-		<link rel="stylesheet" type="text/css" href="/css/reset.css" />
-		<link rel="stylesheet" type="text/css" href="/css/mainpage.css" />
+		<link rel="stylesheet" type="text/css" href="./css/reset.css" />
+		<link rel="stylesheet" type="text/css" href="./css/mainpage.css" />
 	</head>
 	<body>
 		<header class="header">
